# squamish

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.sh
.github/workflows/: main.yml
squamish/: algorithm.py  grouping.py  main.py  models.py  plot.py  stat.py  utils.py
squamish/tests/: test_main.py  test_stat.py
