[tool.poetry]
name = "squamish"
version = "0.1.0"
description = ""
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.21.3"
hypothesis-auto = "^1.0.1"
lightgbm = "^2.3.0"
pandas = "^0.25.3"
fri = "^7.1.0"
boruta = {git = "https://github.com/lpfann/boruta_py", rev = "fix_lightgbm_rs"}
pytest = "^5.1.2"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
lab = "^4.2"
jupyterlab = "^1.2.3"
pre-commit = "^1.18.3"
black = "^19.10b0"
jupyterlab_code_formatter = "^0.7.0"
pylint = "^2.4.4"
jupyter-lsp = "^0.6.0-beta.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

